style.css
body {
    font-family: sorts-mill-goudy,serif;
}

h2 {
    font-family: 'Italianno', cursive;
    font-weight: lighter;
    /* padding-top: 150px; */
}

.pt-6 {
    padding-top: 150px;
}

/* ---------  NAV BAR --------- */

#logo-main {
    display: block;
    margin: 5px auto;
  }

.top-logo {
    background-color: white;
}

.nav-item {
    text-transform: uppercase;
    font-size: 1rem;
}

.navbar {
    width: 70%;
    margin: auto auto 15px auto;
    border-bottom: 1px solid #cccccc;
}

/* ---------  JUMBOTRON --------- */

.jumbotron {
    background-position: center;
    background-color: white;
    background-size: cover;
    height: 100vh;
    padding-top: 175px;
}

.card {
    border-radius: 0;
    border: none;
}

.card-img-top {
    border-radius: 0;
    border: none;
}

.col-md-4 {
    padding: 0 5px;
}

/* ---------  SERVICES  --------- */
h4 {
    text-transform: uppercase;
    color: rgba(0,0,0,.3);
}

.btn {
    border-radius: 0;
    text-transform: uppercase;
}

.btn-outline-success {
    color: #fff;
    background-color: #c2c2d6;
    border-color: #9494b8;
}

  
.btn-outline-success:hover {
    color: #fff;
    background-color: #9494b8;
    border-color: #9494b8;
}

.btn-outline-success:focus, 
.btn-outline-success.focus {
    box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
}

.btn-outline-success.disabled, 
.btn-outline-success:disabled {
    color: #c2c2d6;
    background-color: transparent;
}

.btn-outline-success:not(:disabled):not(.disabled):active, 
.btn-outline-success:not(:disabled):not(.disabled).active,
.show > .btn-outline-success.dropdown-toggle {
  color: #fff;
  background-color: #c2c2d6;
  border-color: #c2c2d6;
}

.btn-outline-success:not(:disabled):not(.disabled):active:focus, 
.btn-outline-success:not(:disabled):not(.disabled).active:focus,
.show > .btn-outline-success.dropdown-toggle:focus {
  box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
}


.btn-primary {
    color: #fff;
    background-color: #c2c2d6;
    border-color: #9494b8;
}

.btn-primary:hover {
    color: #fff;
    background-color: #c2c2d6;
    border-color: #9494b8;
}

.btn-primary:focus, 
.btn-primary.focus {
    box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
  }
  

.btn-primary.disabled, 
.btn-primary:disabled {
    color: #fff;
    background-color: #c2c2d6;
    border-color: #9494b8;
}

.btn-primary:not(:disabled):not(.disabled):active, 
.btn-primary:not(:disabled):not(.disabled).active,
.show > .btn-primary.dropdown-toggle {
    color: #fff;
    background-color: #c2c2d6;
    border-color: #9494b8;
}

.btn-primary:not(:disabled):not(.disabled):active:focus, 
.btn-primary:not(:disabled):not(.disabled).active:focus,
.show > .btn-primary.dropdown-toggle:focus {
  box-shadow: 0 0 0 0.2rem rgba(194, 194, 214, 0.5);
}

/* ---------  GALLERY  --------- */

.insta-link {
    font-size: 1.5rem;
    text-transform: uppercase;
    color: #cccccc;
}

.insta-link > a:link {
    color: #cccccc;
    background-color: transparent; 
    text-decoration: none;
  }
  
  .insta-link > a:visited {
    color: #cccccc;
    background-color: transparent;
    text-decoration: none;
  }
  
  .insta-link > a:hover {
    color: #b3b3b3;
    background-color: transparent;
    text-decoration: none;
  }
  
  .insta-link > a:active {
    color: #cccccc;
    background-color: transparent;
    text-decoration: none;
  }

/* ---------  TESTIMONIALS  --------- */
#testimonials {
    height: 75vh;
    margin: auto;
}

.carousel-item {
    height: 40vh;
    /* padding-top: 4rem; */
    padding: 4rem 0;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  height: 100px;
  width: 100px;
  outline: black;
  background-size: 100%, 100%;
  background-image: none;
}

.carousel-control-prev-icon {
    padding-right: 3rem;
}

.carousel-control-next-icon {
    padding-left: 3rem;
}

.carousel-control-next-icon:after
{
  content: '>';
  font-size: 35px;
  color: black;
}

.carousel-control-prev-icon:after {
  content: '<';
  font-size: 35px;
  color: black;
}

.carousel-indicators {
    padding-bottom: 2rem;
}

.carousel-indicators li {
    /* width: 10px;
    height: 10px;
    border-radius: 100%;  */
    background-color: black;
  }

/* ---------  CONTACT  --------- */
#contact {
    background-color: #f2f2f2;
}

.btn-primary {
    color: #fff;
    background-color: #c2c2d6;
    border-color: #9494b8;
}

.btn-primary:hover {
    color: #fff;
    background-color: #9494b8;
    border-color: #9494b8;
}

@media screen and (min-width: 700px) {
    .nav-item {
        font-size: 0.75rem;
    }

    .jumbotron {
        height: 40vh;
    }
}



@media screen and (min-width: 870px) {
    .nav-item {
        font-size: 1rem;
    }

    .jumbotron {
        height: 100vh;
    }
}

